<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/paddingHorizontal"
    android:paddingBottom="@dimen/paddingHorizontal"
    android:paddingLeft="@dimen/paddingVertical"
    android:paddingRight="@dimen/paddingVertical"
    android:orientation="vertical"
    tools:context=".MainActivity">


<!--#### FullName-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tifullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--#### Birthday-->
    <DatePicker
        android:id="@+id/tiBirthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_marginTop="@dimen/marginTop">

    </DatePicker>

<!--#### Phone-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginTop="@dimen/marginTop">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--#### Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/marginTop">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--#### Description-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:layout_marginTop="@dimen/marginTop">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/paddingHorizontal"
        android:background="@color/colorAccent"
        android:text="@string/btnNext">
    </Button>

</LinearLayout>
</ScrollView>