<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/paddingVertical"
        android:paddingRight="@dimen/paddingVertical"
        android:paddingTop="@dimen/paddingHorizontal"
        android:paddingBottom="@dimen/paddingHorizontal"
        tools:context=".MainActivity">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            card_view:cardCornerRadius="15dp"
            android:layout_gravity="center_vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/paddingHorizontal"
                android:paddingBottom="@dimen/paddingHorizontal"
                android:paddingLeft="@dimen/paddingVertical"
                android:paddingRight="@dimen/paddingVertical"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="@dimen/title2"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/tvBirthDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/birthDay"
                    android:textSize="@dimen/body"
                    android:layout_marginTop="@dimen/marginTop">
                </TextView>

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="@dimen/body"

                    android:layout_marginTop="@dimen/marginTop">
                </TextView>

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="@dimen/body"
                    android:layout_marginTop="@dimen/marginTop">
                </TextView>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textSize="@dimen/body"
                    android:layout_marginTop="@dimen/marginTop">
                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/paddingHorizontal"
            android:background="@color/colorAccent"
            android:text="@string/btnEditar">
        </Button>
        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </ScrollView>